@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a check on the version in case of export errors
   * Fixed `--make-html-report`: the view task_info was not registered
   * Stored several strings as HDF5-variable-length strings
   * Fixed an export bug for the hazard curves in .geojson format
